added layout structure and footer

--- a/src/app/ui/layout/layout.component.html
+++ b/src/app/ui/layout/layout.component.html
@@ -1,4 +1,4 @@
-<div class="container">
-  <ng-content></ngcontent>
+<div class="container-fluid">
+  <ng-content></ng-content>
 </div>
 <app-footer></app-footer>
