--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,6 +1,6 @@
 <h1 class="text-center">Catalog</h1>
 <!--<h2>{{ helloThere.content }}</h2>-->
-<div class="container-fluid table-responsive">
+<div class="table-responsive">
 	<table class="table table-hover">
 		<thead class="thead-dark">
 			<tr>
