added routes and appended form view to bottom of page

--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -31,7 +31,7 @@
 	x
 </button>
 
-<button type="button" class="col-2 btn btn-primary" (click)="add(
+<!-- <button type="button" class="col-2 btn btn-primary" (click)="add(
 	{
 		'name': 'Storybook',
 		'author': 'Mr. Writer',
@@ -41,4 +41,4 @@
 		'count': 3
 	})">
   Add Book
-</button>
+</button> -->
