--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-layout>
   <app-books></app-books>
 </app-layout>
+<a [routerLink]="[{ outlets: { popup: ['add'] } }]">Add</a>
+
+<router-outlet name="popup"></router-outlet>
