responsive form css formatting

--- a/src/app/books/form/form.component.html
+++ b/src/app/books/form/form.component.html
@@ -2,38 +2,38 @@
 	<h2>Book Information</h2>
 	<div class="form-group justify-content-center">
 		<label for="bookTitle">Title</label>
-		<input type="text" class="form-control col-8" id="bookTitle" />
+		<input type="text" class="form-control col-md-8 col-lg-6" id="bookTitle" />
 	</div>
 	<div class="form-row">
-		<div class="form-group col-4">
+		<div class="form-group col-md-4 col-lg-3">
 			<label for="authorName">Author</label>
 			<input type="text" class="form-control" id="firstName"  placeholder="First Name" />
 		</div>
-		<div class="form-group col-4">
+		<div class="form-group col-md-4 col-lg-3">
 			<label for="authorName" class="invisible">Last Name</label>
 			<input type="text" class="form-control" id="lastName"  placeholder="Last Name" />
 		</div>
 	</div>
 	<div class="form-row">
-		<div class="form-group col-2">
+		<div class="form-group col-lg-2 col-md-3 col-sm-4">
 			<label for="genre">Genre</label>
 			<input type="text" id="genre" class="form-control" />
 		</div>
-		<div class="form-group col-2">
+		<div class="form-group col-lg-2 col-md-3 col-sm-4 col-6">
 			<label for="yearPublished">Year Published</label>
 			<input type="text" id="yearPublished" placeholder="MM/DD/YYYY" class="form-control" />
 		</div>
-		<div class="form-group col-2">
+		<div class="form-group col-lg-2 col-md-3 col-sm-4 col-6">
 			<label for="ISBN">ISBN</label>
 			<input type="text" id="ISBN" class="form-control" />
 		</div>
 	</div>
 	<div class="form-row">
-		<div class="form-group col-2">
+		<div class="form-group col-6 col-sm-3 col-md-2">
 			<label for="bookTotal">Inventory</label>
 			<input type="text" id="bookTotal" class="form-control" />
 		</div>
-		<div class="form-group col-2">
+		<div class="form-group col-6 col-sm-3 col-md-2">
 			<label for="issued">Copies Issued</label>
 			<input type="text" id="issued" class="form-control" />
 		</div>
