--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -27,8 +27,8 @@
 	</table>
 </div>
 
-<button class="delete col-2" title="delete hero" (click)="delete(book)">
-	x
+<button class="btn btn-danger" title="delete book" (click)="delete(book)">
+	Delete Book
 </button>
 
 <!-- <button type="button" class="col-2 btn btn-primary" (click)="add(
