--- a/src/app/books/form/form.component.html
+++ b/src/app/books/form/form.component.html
@@ -2,7 +2,7 @@
 	<h2>Book Information</h2>
 	<div class="form-group justify-content-center">
 		<label for="bookTitle">Title</label>
-		<input type="text" class="form-control col-md-8 col-lg-6" #name="ngModel" name="name" id="bookTitle" [(ngModel)]= "bookModel.name" />
+		<input type="text" class="form-control col-md-8 col-lg-6" #name="ngModel" name="name" id="bookTitle" [(ngModel)]= "bookModel.name" autofocus/>
 	</div>
 	<div class="form-row">
 		<div class="form-group col-md-4 col-lg-3">
