--- a/src/app/books/form/form.component.html
+++ b/src/app/books/form/form.component.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="form-group col-lg-2 col-md-3 col-sm-4 col-6">
 			<label for="yearPublished">Year Published</label>
-			<input type="year" id="yearPublished" #publishDate="ngModel" name="publishDate" class="form-control" [(ngModel)]="bookModel.publishDate" />
+			<input type="date" id="yearPublished" #publishDate="ngModel" name="publishDate" class="form-control" [(ngModel)]="bookModel.publishDate" />
 		</div>
 		<div class="form-group col-lg-2 col-md-3 col-sm-4 col-6">
 			<label for="ISBN">ISBN</label>
