--- a/src/app/ui/footer/footer.component.html
+++ b/src/app/ui/footer/footer.component.html
@@ -3,6 +3,6 @@
       <i>Made by the <i class="fas fa-terminal"></i>SynechronSquad</i>
     </div>
     <div class="float-right">
-      <a class="text-light" href="https://github.com/ma-singh/synechron-challenge"><i class="fab fa-github"></i></a>
+      <a class="text-light" href="https://github.com/ma-singh/synechron-challenge" target="_blank"><i class="fab fa-github"></i></a>
     </div>
 </nav>
