working with toggle

--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -31,9 +31,14 @@
 		</tbody>
 	</table>
 </div>
-<button (click)="openModal('custom-modal-1')">Open</button>
+<!-- <button (click)="openModal('custom-modal-1')">Open</button>
 <book-modal id="custom-modal-1">
     <h1>A Custom Modal!</h1>
     <p>Home page text: <input type="text" [(ngModel)]="bodyText" /></p>
     <button (click)="closeModal('custom-modal-1');">Close</button>
-</book-modal>
+</book-modal> -->
+
+<button (click)="toggle()">show</button>
+<div [hidden]="!toggled">
+	<h1>I can show or hide!</h1>
+</div>
