--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -15,7 +15,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr *ngFor="let book of catalog; let i=index;">
+			<tr *ngFor="let book of catalog; let i=index;" (click)="selectRow(i)">
 				<th>{{ book.name }}</th>
 				<td>{{ book.author }}</td>
 				<td>{{ book.category }}</td>
@@ -24,21 +24,16 @@
 				<td>{{ book.issued }}</td>
 				<td>{{ book.isbn }}</td>
 				<td>
-					<button class="btn btn-outline-danger" title="delete book" (click)="selectRow(i)">
+					<button class="btn btn-outline-danger" title="delete book" (click)="delete(i)">
 						Delete Book
 					</button>
+				</td>
 			</tr>
 		</tbody>
 	</table>
 </div>
-<!-- <button (click)="openModal('custom-modal-1')">Open</button>
+<button (click)="openModal('custom-modal-1');">Open</button>
 <book-modal id="custom-modal-1">
     <h1>A Custom Modal!</h1>
-    <p>Home page text: <input type="text" [(ngModel)]="bodyText" /></p>
     <button (click)="closeModal('custom-modal-1');">Close</button>
-</book-modal> -->
-
-<button (click)="toggle()">show</button>
-<div [hidden]="!toggled">
-	<h1>I can show or hide!</h1>
-</div>
+</book-modal>
