fixing request parameters and formatting for dates

--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -7,7 +7,7 @@
 				<th scope="col">Title</th>
 				<th scope="col">Author</th>
 				<th scope="col">Genre</th>
-				<th scope="col">Year Published</th>
+				<th scope="col">Published</th>
 				<th scope="col">Inventory</th>
 				<th scope="col">Issued</th>
 				<th scope="col">ISBN</th>
