--- a/src/app/books/transactions/transactions.component.html
+++ b/src/app/books/transactions/transactions.component.html
@@ -1,3 +1,11 @@
-<p>
-  transactions works!
-</p>
+<h3>Transactions</h3>
+<!-- <ul>
+  <li *ngFor="let item of catalog.catalog" [class.selected]="isSelected(item)" (click)="onSelect(item)">
+    <span class="badge">{{ item.bookID }}</span> | {{ item.name }}
+  </li>
+</ul> -->
+<ul>
+  <li *ngFor="let item of catalog.catalog.transactions">{{ item }}</li>
+</ul>
+
+<button (click)="goBack()">Cancel</button>
