--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,5 +1,4 @@
 <h1 class="text-center">Catalog</h1>
-<!--<h2>{{ helloThere.content }}</h2>-->
 <div class="table-responsive">
 	<table #bookCatalog class="table table-hover">
 		<thead class="thead-dark">
@@ -17,7 +16,7 @@
 		</thead>
 		<tbody>
 			<tr *ngFor="let book of catalog; let i=index;">
-				<td [class.selected]="isSelected(book)"><span class="badge">{{ book.bookID }}</span></td>
+				<td [class.selected]="isSelected(book)" (click)="onSelect(book)"><span class="badge">{{ book.bookID }}</span></td>
 				<th class="col-md-auto">{{ book.name }}</th>
 				<td>{{ book.author }}</td>
 				<td>{{ book.category }}</td>
